content/vault/v1.19.x/content/docs/agent-and-proxy/autoauth/methods/ldap.mdx
---
layout: docs
page_title: Auto-auth with LDAP
description: >-
  Use LDAP for auto-authentication with Vault Agent or Vault Proxy.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-01T14:39:24-05:00
last_modified: 2025-07-02T11:30:26-05:00
# END AUTO GENERATED METADATA
---

# Auto-auth method: LDAP

The `ldap` method reads in a password from a file and sends it to the [LDAP Auth
method](/vault/docs/auth/ldap).

## Configuration

- `password_file_path` `(string: required)` - Path to a regular file (or
  symlink to a file) whose **entire contents** are used as the LDAP password.
  There is no special encoding: no JSON, no key=value wrapper—just the raw
  password bytes as text. A trailing newline is included if present, so prefer
  writing the file without one (for example `printf '%s' 'secret' > /path/to/pass`).
  The path must point at a file, not a directory.

- `username` `(string: required)` - The username to authenticate against on Vault

- `remove_password_after_reading` `(bool: optional, defaults to true)` -
  This can be set to `false` to disable the default behavior of removing the
  password after it's been read.

- `remove_password_follows_symlinks` `(bool: optional, defaults to false)` -
This can be set to `true` to follow symlinks when removing the password after
it has been read when executing the `remove_password_after_reading` behaviour.
If set to false, it will delete the symlink, not the password file. Does
nothing if `remove_password_after_reading` is false.

- `password_read_period` `(duration: "0.5s", optional)` - The duration after which 
auto-auth will attempt to read the password stored at `password_file_path`.
Defaults to `1m` if `remove_password_after_reading` is set to `true`, or `0.5s`
otherwise. Uses [duration format
strings](/vault/docs/concepts/duration-format).

## Example

```hcl
auto_auth {
  method {
    type = "ldap"
    config = {
      username           = "agent"
      password_file_path = "/run/vault-agent/ldap-password"
      # file contents: the password only, no trailing newline preferred
    }
  }
}
```

